--- a/frontend/src/app/core/layout/layout.component.html
+++ b/frontend/src/app/core/layout/layout.component.html
@@ -1,1 +1,10 @@
-<p>layout works!</p>
+<header>
+    <app-header></app-header> 
+ </header>
+ 
+ <div class="container">
+     <router-outlet>
+     </router-outlet>
+ </div>
+ 
+ <footer></footer>
