--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,1 +1,21 @@
-<p>header works!</p>
+<section class="main_nav" id="navigation">
+    <nav class="main_nav-container container">
+        <div class="main_nav-logo">
+            <img src="../../assets/magikarp_logo.png"/>
+        </div>
+
+        <div class="main_nav-search">
+            <input type="text" placeholder="search" id="search" name="search">
+        </div>
+
+        <div class="main_nav-picker">
+            <select>
+                <option> Genre picker </option>
+                <option> Genre 1</option>
+                <option> Genre 2</option>
+                <option> Genre 3</option>
+            </select>
+        </div>
+
+    </nav>
+</section>
