--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<section id="main">
+    <div class="container">
+        <memelist>
+        </memelist>
+
+        <div class="main__info-field-container">
+            
+        </div>
+    </div>
+</section>
