--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <section class="main_nav" id="navigation">
-    <nav class="main_nav-container container">
+    <nav class="main_nav-container ">
         <div class="main_nav-logo">
             <img src="../../assets/magikarp_logo.png"/>
         </div>
