--- a/frontend/src/app/shared/components/meme/meme.component.html
+++ b/frontend/src/app/shared/components/meme/meme.component.html
@@ -1,1 +1,11 @@
-<p>meme works!</p>
+<div class="meme-container">
+    <div class="meme">
+        <div class="meme-name">
+            {{memeName}}
+        </div>
+        <div class="meme-image">
+            <img src="../../assets/magikarp_logo.png">
+            <!-- <img src="{{memeImageUrl}}"> -->
+        </div>
+    </div>
+</div>
