--- a/frontend/src/app/shared/components/header/header.component.scss
+++ b/frontend/src/app/shared/components/header/header.component.scss
@@ -13,6 +13,13 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        width: 100%;
+        box-sizing: border-box;
+        width: auto;
+        // max-width: 1640px;
+        padding: 0 1.5rem;
+        margin-left: 2.5rem;
+        margin-right: 2.5rem;
     }
 
     &-logo{
