Added that we can create memes front and backend Added that we load in the memes on the homescreen

--- a/frontend/src/app/shared/components/memelist/memelist.component.html
+++ b/frontend/src/app/shared/components/memelist/memelist.component.html
@@ -2,10 +2,10 @@
     <div class="meme-container container" *ngFor="let item of memes;" >
             <meme 
             [memeId] ="item.id"
-            [memeName] = "item.name"
-            [memeImageUrl] = "item.ImageUrl"
-            [memeUpvotes] = "item.Upvotes"
-            [memeDownvotes] = "item.Downvotes">
+            [memeName] = "item.title"
+            [memeImageUrl] = "item.imageSrc"
+            [memeUpvotes] = "item.likes"
+            [memeDownvotes] = "item.dislikes">
         </meme>
     
     </div>
