--- a/frontend/src/app/shared/components/meme/meme.component.html
+++ b/frontend/src/app/shared/components/meme/meme.component.html
@@ -4,8 +4,7 @@
             {{memeName}}
         </div>
         <div class="meme-image">
-            <img src="../../assets/magikarp_logo.png">
-            <!-- <img src="{{memeImageUrl}}"> -->
+            <img src="{{memeImageUrl}}">
         </div>
     </div>
 </div>
