--- a/frontend/src/app/core/layout/layout.component.html
+++ b/frontend/src/app/core/layout/layout.component.html
@@ -1,11 +1,27 @@
-<header>
+<!-- <header>
     <app-header></app-header> 
  </header>
  
  <div class="container">
      <app-menu></app-menu>
-     <router-outlet>
-     </router-outlet>
  </div>
  
- <footer></footer>
+ <footer></footer> -->
+
+<div>
+  <div class="columns">
+    <div class="column">
+      <app-header></app-header>
+    </div>
+  </div>
+  <div class="columns">
+    <div class="column">
+      <app-menu></app-menu>
+    </div>
+  </div>
+  <div class="columns">
+    <div class="column">
+      <app-home></app-home>
+    </div>
+  </div>
+</div>
