--- a/frontend/src/app/shared/components/meme/meme.component.html
+++ b/frontend/src/app/shared/components/meme/meme.component.html
@@ -1,4 +1,4 @@
-<div class="meme-container">
+<!-- <div class="meme-container">
     <div class="meme">
         <div class="meme-name">
             {{memeName}}
@@ -7,4 +7,29 @@
             <img src="{{memeImageUrl}}">
         </div>
     </div>
+</div> -->
+
+<div class="container has-text-centered meme-item">
+    <h1 class="title">{{memeName}}</h1>
+    <img src="{{memeImageUrl}}">
+
+    <div class="has-text-left">
+        <h2 class="subtitle margin">69 pts</h2>
+        <button class="button is-large icon-button">
+            <span class="icon is-large">
+                <i class="fa fa-arrow-up" aria-hidden="true"></i>
+            </span>
+        </button>
+        <button class="button is-large icon-button">
+            <span class="icon is-large">
+                <i class="fa fa-arrow-down" aria-hidden="true"></i>
+            </span>
+        </button>
+    </div>
 </div>
+
+<style>
+    .margin{
+        margin-left:30px;
+    }
+</style>
