Added login and signup forms

--- a/frontend/src/app/core/layout/layout.component.html
+++ b/frontend/src/app/core/layout/layout.component.html
@@ -1,13 +1,3 @@
-<!-- <header>
-    <app-header></app-header> 
- </header>
- 
- <div class="container">
-     <app-menu></app-menu>
- </div>
- 
- <footer></footer> -->
-
 <div>
   <div class="columns">
     <div class="column">
@@ -21,7 +11,9 @@
   </div>
   <div class="columns">
     <div class="column">
-      <app-home></app-home>
+      <router-outlet>
+      </router-outlet>
+      <!-- <app-home></app-home> -->
     </div>
   </div>
 </div>
