--- a/frontend/src/app/shared/components/meme/meme.component.html
+++ b/frontend/src/app/shared/components/meme/meme.component.html
@@ -13,7 +13,7 @@
     <h1 class="title">{{memeName}}</h1>
     <img src="{{memeImageUrl}}">
 
-    <div class="has-text-left">
+    <div>
         <h2 class="subtitle margin">69 pts</h2>
         <button class="button is-large icon-button">
             <span class="icon is-large">
