--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -1,28 +1,31 @@
 <section id="profile">
     <div class="container">
-        <div class="profile-container">
-            <h2>Your profile</h2>
-            <div class="profile-form">
-                <form>
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" formControlName="username" class="form-control" disabled value="{{user.username}}"/>
-                    </div>
-        
-                    <div class="form-group">
-                        <label for="username">Email</label>
-                        <input id="email" type="email" formControlName="email" class="form-control" value={{user.email}}/>
-                    </div>
-        
-                    <div class="form-group">
-                        <label for="username">Password</label>
-                        <input id="password" type="password" formControlName="password" class="form-control" />
-                    </div>
-        
-                    <button class="btn btn-primary" (click)="updateUser()">Update</button>
-                </form>
+        <h1 class="title">Profile</h1>
+        <form>
+            <div class="field">
+                <label for="username" class="label">Username</label>
+                <div class="control">
+                    <input id="username" class="input" type="text" formControlName="username" disabled value="{{user.username}}"/>
+                </div>
             </div>
+            <div class="field">
+                <label for="email" class="label">Email</label>
+                <div class="control">
+                    <input id="email" type="email" formControlName="email" class="input"/>
+                </div>
+            </div>
+            <div class="field">
+                <label for="password" class="label">Password</label>
+                <div class="control">
+                    <input id="password" type="password" formControlName="password" class="input"/>
+                </div>
+            </div>
+            <button class="button is-success" (click)="updateUser()">Update</button>
+        </form>
+
+        <div class="block notification is-success is-light margin">
+            <button class="delete"></button>
+            Your profile has been updated.
         </div>
     </div>
 </section>
-
