--- a/frontend/src/app/pages/signup/signup.component.html
+++ b/frontend/src/app/pages/signup/signup.component.html
@@ -31,6 +31,13 @@
                     <input id="password" class="input" type="password" formControlName="password" />
                 </div>
             </div>
+
+            <div class="field">
+                <label for="password" class="label">Email</label>
+                <div class="control">
+                    <input id="email" class="input" type="email" formControlName="email" />
+                </div>
+            </div>
             <button class="button is-success" (click)="signup()">Sign up</button> 
 
             <div class="block notification is-success is-light margin">
