Added basic tables for Admin page

--- a/frontend/src/app/pages/admin/admin.component.html
+++ b/frontend/src/app/pages/admin/admin.component.html
@@ -1,50 +1,3 @@
-<p>This is the Admin Page!</p>
-<app-table [headers]="headersUsers" [dataUrl]="userUrl"></app-table>
-<table class="tg">
-  <thead>
-    <tr>
-      <th class="tg-0lax">Meme Titel (zoeken?)</th>
-      <th class="tg-0lax">UserName (geordend)</th>
-      <th class="tg-0lax">#Reported (geordend)</th>
-      <th class="tg-0lax">Createdate</th>
-      <th class="tg-0lax">Reason why reported</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="tg-0lax">Java is</td>
-      <td class="tg-0lax">Bobbert</td>
-      <td class="tg-0lax">8</td>
-      <td class="tg-0lax">01-01-19</td>
-      <td class="tg-0lax">Omdat het kut is</td>
-    </tr>
-    <tr>
-      <td class="tg-0lax">Kut</td>
-      <td class="tg-0lax">KamieKaasie</td>
-      <td class="tg-0lax">999</td>
-      <td class="tg-0lax">12-06-20</td>
-      <td class="tg-0lax">Taalgebruik</td>
-    </tr>
-    <tr>
-      <td class="tg-0lax">Lama zitten</td>
-      <td class="tg-0lax">LamaLover420</td>
-      <td class="tg-0lax">420</td>
-      <td class="tg-0lax">04-10-21</td>
-      <td class="tg-0lax">Toekomst?</td>
-    </tr>
-    <tr>
-      <td class="tg-0lax">Wie? Odie!</td>
-      <td class="tg-0lax">Odie</td>
-      <td class="tg-0lax">0</td>
-      <td class="tg-0lax">21-13-20</td>
-      <td class="tg-0lax">Bestaat niet!</td>
-    </tr>
-    <tr>
-      <td class="tg-0lax">Kutgrappen</td>
-      <td class="tg-0lax">Rimpelsaurier</td>
-      <td class="tg-0lax">0</td>
-      <td class="tg-0lax">01-01-01</td>
-      <td class="tg-0lax">Grafgrap</td>
-    </tr>
-  </tbody>
-</table>
+<h1>Admin Page</h1>
+<app-table [items]="users" [headers]="headersUsers"></app-table>
+<app-table [items]="memes" [headers]="headersMemes"></app-table>
