--- a/frontend/src/app/shared/components/meme/meme.component.html
+++ b/frontend/src/app/shared/components/meme/meme.component.html
@@ -27,6 +27,12 @@
                 </span>
             </button>
         </div>
+        <div (click)="sendMessage('u')">
+            Upvotes: {{memeUpvotes}}
+        </div>
+        <div (click)="sendMessage('d')">
+            Downvotes: {{memeDownvotes}}
+        </div>
     </div>
 </div>
 
