--- a/frontend/src/app/pages/password-reset/password-reset.component.html
+++ b/frontend/src/app/pages/password-reset/password-reset.component.html
@@ -9,7 +9,7 @@
                     <input id="username" class="input" type="text" formControlName="username" disabled value="{{user.username}}"/>
                 </div>
             </div>ddnj
-            <button class="button is-success" (click)="">Reset</button>
+            <button class="button is-success">Reset</button>
         </form>
         <div class="block notification is-success is-light margin">
             <button class="delete"></button>
