Fixed frontend and login

--- a/frontend/src/app/pages/signup/signup.component.html
+++ b/frontend/src/app/pages/signup/signup.component.html
@@ -40,10 +40,10 @@
             </div>
             <button class="button is-success" (click)="signup()">Sign up</button> 
 
-            <div class="block notification is-success is-light margin">
+            <!-- <div class="block notification is-success is-light margin">
                 <button class="delete"></button>
                 An email as been sent to 'test@example.com'! Click the link in the email to log in.
-            </div>
+            </div> -->
         </form>
     </div>
 </section>
