--- a/frontend/src/app/pages/signup/signup.component.html
+++ b/frontend/src/app/pages/signup/signup.component.html
@@ -1,49 +1,34 @@
 <section id="signup">
     <div class="container">
-        <h1 class="title">Sign up!</h1>
-        <form [formGroup]="signupForm">
-            <!-- <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" formControlName="username" class="form-control" />
-            </div>
-
-            <div class="form-group">
-                <label for="username">Password</label>
-                <input type="password" formControlName="password" class="form-control" />
-            </div>
-
-            <div class="form-group">
-                <label for="username">Email</label>
-                <input type="email" formControlName="email" class="form-control" />
-            </div>
-            <button class="btn btn-primary" (click)="signup()">Sign up</button> -->
-
-            <div class="field">
-                <label for="username" class="label">Username</label>
-                <div class="control">
-                    <input id="username" class="input" type="text" formControlName="username" />
+        <div *ngIf="!createdAccount">
+            <h1 class="title">Sign up!</h1>
+            <form [formGroup]="signupForm">
+                <div class="field">
+                    <label for="username" class="label">Username</label>
+                    <div class="control">
+                        <input id="username" class="input" type="text" formControlName="username" />
+                    </div>
                 </div>
-            </div>
 
-            <div class="field">
-                <label for="password" class="label">Password</label>
-                <div class="control">
-                    <input id="password" class="input" type="password" formControlName="password" />
+                <div class="field">
+                    <label for="password" class="label">Password</label>
+                    <div class="control">
+                        <input id="password" class="input" type="password" formControlName="password" />
+                    </div>
                 </div>
-            </div>
 
-            <div class="field">
-                <label for="password" class="label">Email</label>
-                <div class="control">
-                    <input id="email" class="input" type="email" formControlName="email" />
+                <div class="field">
+                    <label for="password" class="label">Email</label>
+                    <div class="control">
+                        <input id="email" class="input" type="email" formControlName="email" />
+                    </div>
                 </div>
-            </div>
-            <button class="button is-success" (click)="signup()">Sign up</button> 
+                <button class="button is-success" (click)="signup()">Sign up</button>
+            </form>
+        </div>
 
-            <!-- <div class="block notification is-success is-light margin">
-                <button class="delete"></button>
-                An email as been sent to 'test@example.com'! Click the link in the email to log in.
-            </div> -->
-        </form>
+        <div *ngIf="createdAccount" class="block notification is-success is-light margin">
+            An email as been sent to '{{ f.email.value }}'! Click the link in the email to log in.
+        </div>
     </div>
 </section>
