--- a/frontend/src/app/shared/components/menu/menu.component.html
+++ b/frontend/src/app/shared/components/menu/menu.component.html
@@ -1,6 +1,14 @@
 <ul>
-    <li *ngIf="!user"><a [routerLink]="['/login']">Login </a></li>
-    <li *ngIf="!user"><a [routerLink]="['/signup']">Signup </a></li>
-    <li *ngIf="user"><a [routerLink]="['/create']">Create </a></li>
-    <li *ngIf="user"><a [routerLink]="['/profile']">Profile</a></li>
+    <li><a [routerLink]="['/home']"> <i class="fa fa-home" aria-hidden="true"></i>
+            &nbsp; Home </a></li>
+    <li *ngIf="!user"><a [routerLink]="['/login']"><i class="fa fa-sign-in" aria-hidden="true"></i>
+            &nbsp; Login </a></li>
+    <li *ngIf="!user"><a [routerLink]="['/signup']"><i class="fa fa-user-plus" aria-hidden="true"></i>&nbsp; Signup </a>
+    </li>
+    <li *ngIf="user"><a [routerLink]="['/create']">
+            <i class="fa fa-plus" aria-hidden="true"></i> &nbsp; Create </a></li>
+    <li *ngIf="user"><a [routerLink]="['/profile/', user.id]"><i class="fa fa-user" aria-hidden="true"></i>
+            &nbsp;Profile</a></li>
+    <li *ngIf="user"><a [routerLink]="['/logout']"><i class="fa fa-sign-out" aria-hidden="true"></i>
+            &nbsp;Log out</a></li>
 </ul>
