Hide buttons and redirect users to the login page when user is not logged in

--- a/frontend/src/app/pages/signup/signup.component.html
+++ b/frontend/src/app/pages/signup/signup.component.html
@@ -28,7 +28,7 @@
         </div>
 
         <div *ngIf="createdAccount" class="block notification is-success is-light margin">
-            An email as been sent to '{{ f.email.value }}'! Click the link in the email to log in.
+            Een email is verstuurd naar'{{ f.email.value }}'! Klik op de link in deze email om uw account te activeren en om in te kunnen loggen! 
         </div>
     </div>
 </section>
