--- a/frontend/src/app/shared/components/meme/meme.component.html
+++ b/frontend/src/app/shared/components/meme/meme.component.html
@@ -2,28 +2,31 @@
     <h1 class="title">{{memeName}}</h1>
     <img src="{{memeImageUrl}}">
 
-    <div>
+    <div class="container">
         <h2 class="subtitle margin">Likes: {{ memeUpvotes}} Dislikes: {{ memeDownvotes }}</h2>
-        <button class="button is-large icon-button">
-            <span class="icon is-large">
-                <i class="fa fa-thumbs-up" aria-hidden="true"></i>
-            </span>
-        </button>
-        <button class="button is-large icon-button">
-            <span class="icon is-large">
-                <i class="fa fa-thumbs-down" aria-hidden="true"></i>
-            </span>
-        </button>
-        <button class="button is-large icon-button" (click)="flagMeme(memeId)" [disabled]="status">
-            <span class="icon is-large">
-                <i class="fa fa-exclamation" ></i>
-            </span>
-        </button>
+
+        <div *ngIf="showButtons">
+            <button class="button is-large icon-button">
+                <span class="icon is-large">
+                    <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                </span>
+            </button>
+            <button class="button is-large icon-button">
+                <span class="icon is-large">
+                    <i class="fa fa-thumbs-down" aria-hidden="true"></i>
+                </span>
+            </button>
+            <button class="button is-large icon-button" (click)="flagMeme(memeId)" [disabled]="status">
+                <span class="icon is-large">
+                    <i class="fa fa-exclamation"></i>
+                </span>
+            </button>
+        </div>
     </div>
 </div>
 
 <style>
-    .margin{
-        margin-left:30px;
+    .margin {
+        margin-left: 30px;
     }
 </style>
