--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -25,7 +25,7 @@
         </form>
 
         <div *ngIf="updatedProfile" class="block notification is-success is-light margin">
-            Uw profiel is geüpdatet.
+            Your profile has been updated.
         </div>
     </div>
 </section>
