--- a/frontend/src/app/shared/components/menu/menu.component.html
+++ b/frontend/src/app/shared/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<ul>
+<ul id="menu">
     <li><a [routerLink]="['/home']"> <i class="fa fa-home" aria-hidden="true"></i>
             &nbsp; Home </a></li>
     <li *ngIf="!user"><a [routerLink]="['/login']"><i class="fa fa-sign-in" aria-hidden="true"></i>
