--- a/frontend/src/app/shared/styles/style.css
+++ b/frontend/src/app/shared/styles/style.css
@@ -10,10 +10,6 @@ body {
     width: 100%;
 }
 
-#header {
-    background: #0C090D;
-}
-
 .icon-button{
     margin-left: 30px;
 }
@@ -49,4 +45,24 @@ li a {
 li a:hover {
     background-color: #111;
     color:#fff;
+}
+
+.added-tag{
+    background:#F15946 !important;
+    padding:20px;
+    border-radius:5px;
+    color:#0C090D;
+    margin:10px;
+    width:100px;
+    height:50px;
+    line-height:-50px;
+}
+
+#header{
+    background:#0C090D;
+}
+
+.dropdown{
+    width:100%;
+    height:25px;
 }
