--- a/frontend/src/app/shared/components/table/table.component.html
+++ b/frontend/src/app/shared/components/table/table.component.html
@@ -1,12 +1,16 @@
 <table class="styled-table">
     <thead>
       <tr>
-        <th *ngFor="let header of headers" [value]="header.value">{{header.text}}</th>
+        <th *ngFor="let header of headers" [value]="header.value">{{ header.text }}</th>
+        <th *ngIf="buttonText">Action</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let item of items">
-        <td *ngFor="let header of headers">{{item[header.value]}}</td>
+        <td *ngFor="let header of headers">{{ item[header.value] }}</td>
+        <td *ngIf="buttonText">
+          <button onclick="actionButton(item.id)">{{ buttonText }}</button>
+        </td>
       </tr>
     </tbody>
   </table>
