--- a/frontend/src/app/shared/components/meme/meme.component.html
+++ b/frontend/src/app/shared/components/meme/meme.component.html
@@ -16,12 +16,12 @@
             </div>
         </div>
         <div *ngIf="showButtons">
-            <button class="button is-large icon-button">
+            <button class="button is-large icon-button" (click)="like()" [disabled]="status">
                 <span class="icon is-large">
                     <i class="fa fa-thumbs-up" aria-hidden="true"></i>
                 </span>
             </button>
-            <button class="button is-large icon-button">
+            <button class="button is-large icon-button" (click)="dislike()" [disabled]="status">
                 <span class="icon is-large">
                     <i class="fa fa-thumbs-down" aria-hidden="true"></i>
                 </span>
