--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,28 +1,3 @@
-<!-- <section class="main_nav" id="navigation">
-    <nav class="main_nav-container ">
-        <div class="main_nav-logo">
-            <a href="/">
-                <img href="/" src="../../assets/magikarp_logo.png"/>
-            </a>
-           
-        </div>
-
-        <div class="main_nav-search">
-            <input type="text" placeholder="search" id="search" name="search">
-        </div>
-
-        <div class="main_nav-picker">
-            <select>
-                <option> Genre picker </option>
-                <option> Genre 1</option>
-                <option> Genre 2</option>
-                <option> Genre 3</option>
-            </select>
-        </div>
-
-    </nav>
-</section> -->
-
 <div class="columns has-text-centered padding" id="header">
     <div class="column is-1 border has-text-centered">
         <figure class="image is-48x48 is-centered">
@@ -30,17 +5,16 @@
         </figure>
     </div>
     <div class="column is-7 border">
-        <input class="input" type="text" placeholder="search" id="search" name="search">
+        <input class="input" type="text" placeholder="search" id="search" name="search" (keyup)="seachText($event.target.value)"> 
     </div>
     <div class="column is-4 border max-width">
 
         <div class="control is-expanded">
             <div class="select is-fullwidth">
-                <select>
-                    <option> Genre picker </option>
-                    <option> Genre 1</option>
-                    <option> Genre 2</option>
-                    <option> Genre 3</option>
+                <select id="category" (change)="onCategoryChange($event.target.value)" class="dropdown">
+                    <option *ngFor="let category of categories" [value]="category.id">
+                        {{category.title}}
+                    </option>
                 </select>
             </div>
         </div>
