--- a/frontend/src/app/shared/components/meme/meme.component.html
+++ b/frontend/src/app/shared/components/meme/meme.component.html
@@ -1,15 +1,15 @@
 <div class="container has-text-centered meme-item">
     <h1 class="title">{{memeName}}</h1>
+    <h2 class="subtitle">Uploaded by: {{ memeUser.username }}</h2>
     <img src="{{memeImageUrl}}">
 
     <div class="container">
         <h2 class="subtitle margin">Likes: {{ memeUpvotes}} Dislikes: {{ memeDownvotes }}</h2>
-        <!-- <h3 class="subtitle margin">category: {{ category }} </h3> -->
         <div>
             <blockquote>
                 {{ description }}
             </blockquote>
-        </div>
+        </div> <br />
         <div class="is-clearfix">
             <div class="float-left added-tag" *ngFor="let tag of tags">
                 {{ tag.title }}
