--- a/frontend/src/app/shared/styles/style.css
+++ b/frontend/src/app/shared/styles/style.css
@@ -52,10 +52,8 @@ li a:hover {
     padding:20px;
     border-radius:5px;
     color:#0C090D;
-    margin:10px;
-    width:100px;
-    height:50px;
-    line-height:-50px;
+    margin-right:10px;
+    margin-bottom:10px;
 }
 
 #header{
